--- a/src/app/Component/header/header.component.html
+++ b/src/app/Component/header/header.component.html
@@ -7,11 +7,10 @@
       <img class="top-nav__img" src="../../../assets/logo/logo_x2.png">
       <ul class="top-nav__first">
         <li><a [routerLink]="['']">Home</a></li>
-        <li class="top-nav__first__Shop"><a href="products.html">Shop <i
-              class="icon-arrow fa fa-angle-down"></i></a>
+        <li class="top-nav__first__Shop"><a href="products.html">Shop <i class="icon-arrow fa fa-angle-down"></i></a>
           <ul class="menu-Shop">
-            <li><a href="wishlist.html">Danh sách yêu thích</a></li>
-            <li><a href="checkout.html">Thủ tục thanh toán</a></li>
+            <li><a href="wishlist.html">Wish List</a></li>
+            <li><a href="checkout.html">Payment</a></li>
           </ul>
         </li>
         <li class="top-nav__first__Page">
@@ -28,11 +27,12 @@
         </li>
         <li><a [routerLink]="['']">Checkout</a></li>
       </ul>
+      <div class="top-nav__second--login-regis"  *ngIf="!isLogin;else login">
+        <a [routerLink]="['login']"><i class="far fa-user"></i> Login</a>/<a class="top-nav__second--regis"
+          [routerLink]="['signup']">Sign Up</a>
+      </div>
+<!-- *ngIf="!user; else login"  -->
       <div class="top-nav__second">
-        <div class="top-nav__second--login-regis">
-          <a href="./login.html"><i class="far fa-user"></i> Đăng nhập</a>/<a class="top-nav__second--regis"
-            href="./register.html">Đăng ký</a>
-        </div>
         <ul class="top-nav__second__icon">
           <li class="item addWishlist"><a href="wishlist.html"><i class="fa-solid fa-heart"></i></a><span class="before"
               id="before1">0</span>
@@ -42,6 +42,10 @@
           <li><a><i class="fa-solid fa-magnifying-glass"></i></a></li>
         </ul>
       </div>
+      <ng-template #login class="top-nav__second--login-regis" >
+       <a>{{user.username}}</a>
+
+      </ng-template>
     </div>
   </div>
 </header>
