--- a/src/app/Component/product-detail/product-detail.component.html
+++ b/src/app/Component/product-detail/product-detail.component.html
@@ -4,7 +4,7 @@
       <div class="left col-sm-12 col-lg-6 col-xl-6">
         <div class="swiper-container gallery-top">
           <div class="swiper-wrapper">
-            <img src="{{dataPro.image}}" alt="">
+            <img [src]="dataPro.image" alt="">
           </div>
         </div>
       </div>
