--- a/src/app/Component/product-item/product-item.component.html
+++ b/src/app/Component/product-item/product-item.component.html
@@ -4,6 +4,8 @@
     <div class="product__button">
       <button class="btn btn__card" (click)="addToCart()">Add to Cart </button>
       <button class="btn btn__detail" (click)="productDetail(item.id)"><i class="fa-solid fa-eye"></i></button>
+      <!-- DÙng thẻ a vs childrenRoute & router-outlet -->
+      <!-- <a [routerLink]="['/productDetail', item.id]"><i class="fa-solid fa-eye"></i></a> -->
     </div>
   </div>
   <div class="card-body">
@@ -19,3 +21,4 @@
     <p class="card-price">{{item.price}}</p>
   </div>
 </div>
+<!-- <router-outlet></router-outlet> -->
