--- a/src/app/Component/product-detail/product-detail.component.html
+++ b/src/app/Component/product-detail/product-detail.component.html
@@ -33,7 +33,7 @@
             <input type="text" class="InputAmountProduct" value="1">
             <a class="plus-1" href=""><i class="bi bi-plus"></i></a>
           </div>
-          <button class="btn a-center d-flex addcartitem" (click)="addToCartList()">
+          <button class="btn a-center d-flex addcartitem" (click)="addToCart(id)">
       Add to Cart
           </button>
         </div>
