--- a/src/app/Component/header/header.component.css
+++ b/src/app/Component/header/header.component.css
@@ -1,4 +1,3 @@
-
 /* start top-bar */
 @keyframes down {
   from {
@@ -215,9 +214,6 @@ header .main-header.active {
   /* display: flex; */
 }
 
-.top-nav__second .top-nav__second--regis {
-  border-right: 1px solid #ccc;
-}
 .top-nav__second a {
   color: #000;
   text-decoration: none;
@@ -230,6 +226,15 @@ header .main-header.active {
 .top-nav__second__icon li {
   position: relative;
 }
+.top-nav__second__icon li:nth-child(2) a{
+  border-right: 1px solid #ccc;
+}
+
+.top-nav__second__icon .top-nav__search {
+  background-color: rgba(177, 175, 175, 0.411);
+  padding: 0 5px;
+}
+
 .top-nav__second__icon li a {
   cursor: pointer;
 }
@@ -294,6 +299,40 @@ header .main-header.active {
   font-size: 48px;
   margin-top: 15px;
   margin-bottom: 25px;
+}
+
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: 100%;
+  border: 3px solid #000;
+  border-right: none;
+  padding: 5px;
+  height: 20px;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  color: #9dbfaf;
+}
+
+.searchTerm:focus {
+  color: #000;
+}
+
+.searchButton {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border: 1px solid #000;
+  background: #000;
+  text-align: center;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  font-size: 20px;
 }
 
 /* responsive iPad */
