--- a/src/app/Component/login/login.component.html
+++ b/src/app/Component/login/login.component.html
@@ -1,23 +1,37 @@
-<div class="login">
-  <form class="login-form" (ngSubmit)="onLoginForm()" [formGroup]="loginForm">
-    <h4>Đăng nhập</h4>
-    <div class="input-box form-group" >
-      <p>Tên Đăng Nhập</p>
-      <input formControlName="username" type="text" placeholder="Nhập tên đăng nhập">
-    </div>
 
-    <div class="input-box form-group" >
-      <p>Mật Khẩu</p>
-      <input formControlName="password" type="password" placeholder="Nhập mật khẩu">
-    </div>
-
-    <div>
-      <button class="btn-first">Đăng Nhập</button>
-    </div>
-
-    <div class="btn-second">
-      <p>Bạn chưa có tài khoản? <a href="#">Đăng ký</a></p>
-    </div>
-
-  </form>
+<!-- Template driven -->
+<!-- <div >
+  <h2>Sign In</h2>
+<div class="input-box form-group">
+  <p>Tên Đăng Nhập</p>
+  <input type="text" placeholder="Nhập tên đăng nhập" #email>
 </div>
+
+<div class="input-box form-group">
+  <p>Mật Khẩu</p>
+  <input  type="password" placeholder="Nhập mật khẩu" #password>
+</div>
+  <button (click)="onSignin(email.value,password.value)">Sign in</button>
+</div> -->
+
+<!-- Reactive form -->
+<div class="login">
+  <form class="login-form" (ngSubmit)="login()" [formGroup]="loginForm">
+    <h2>Login</h2>
+    <div class="input-box form-group">
+      <p>Email</p>
+      <input formControlName="email" type="text" placeholder="Email">
+    </div>
+
+    <div class="input-box form-group">
+      <p>Password</p>
+      <input formControlName="password" type="password" placeholder="Password">
+    </div>
+    <button class="btn-first">Login</button>
+    <div class="btn-second">
+      <p>You don't have an account? <a href="#">Sign up</a></p>
+    </div>
+  </form>
+
+</div>
+
