--- a/src/app/Component/product-item/product-item.component.html
+++ b/src/app/Component/product-item/product-item.component.html
@@ -1,8 +1,9 @@
 <div class="card__item">
   <div class="product__img">
+    <!-- <button class="btn btn__detail" (click)="addToCart(item.id)"></button> -->
     <img src="{{item.image}}" alt="">
     <div class="product__button">
-      <button class="btn btn__card" (click)="addToCart()">Add to Cart </button>
+      <button class="btn btn__card" (click)="addToCart(item.id)">Add to Cart </button>
       <button class="btn btn__detail" (click)="productDetail(item.id)"><i class="fa-solid fa-eye"></i></button>
       <!-- DÙng thẻ a vs childrenRoute & router-outlet -->
       <!-- <a [routerLink]="['/productDetail', item.id]"><i class="fa-solid fa-eye"></i></a> -->
